[tool.poetry]
name = "eskiz-sms"
version = "0.1.3"
description = "Package for eskiz.uz/sms"
homepage = "https://github.com/malikovss/eskiz-sms"
authors = ["Malikov <oopanndaa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "^2.26.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
