[tool.poetry]
name = "eskiz-sms"
version = "0.2.0"
description = "Package for eskiz.uz/sms"
homepage = "https://github.com/malikovss/eskiz-sms"
authors = ["Malikov <mlkv.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
python-dotenv = "^0.21.0"
httpx = "^0.23.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
