[tool.poetry]
name = "eskiz-sms"
version = "0.2.3"
description = "Package for eskiz.uz/sms"
homepage = "https://github.com/malikovss/eskiz-sms"
authors = ["Malikov <mlkv.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-dotenv = "^1.0.0"
httpx = "^0.23.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
